--- a/formularios/css/styles.css
+++ b/formularios/css/styles.css
@@ -14,7 +14,6 @@ section {
   gap: 30px;
   margin-top: 20px;
   max-width: 400px;
-  align-items: center;
   margin: auto;
   padding: 10px;
   margin-top: 20px;
@@ -25,6 +24,7 @@ section {
 
 .botones-redes {
   display: flex;
+  justify-self: start;
   gap: 10px;
 }
 
